force-app/main/default/objects/SALT_Servicers__c/SALT_Servicers__c.object-meta.xml
<CustomObject>
    <label>SALT Servicers</label>
    <nameField>
        <displayFormat>SALT Servicer - {0000}</displayFormat>
        <label>SALT Servicers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SALT Servicers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>