force-app/main/default/objects/SALT_Servicers__c/fields/Servicer__c.field-meta.xml
<CustomField>
    <fullName>Servicer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. The Servicer you are trying to add is not listed as a SALT Servicer.</errorMessage>
        <filterItems>
            <field>Account.SALT_Servicer__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SALT Servicers (Servicer)</relationshipLabel>
    <relationshipName>SALT_Servicers1</relationshipName>
    <type>Lookup</type>
</CustomField>