force-app/main/default/objects/SALT_Servicers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>Access__c</columns>
    <columns>Servicer__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>